RESOLVED FIXED195659
Fix the argument type of RenderView::resumePausedImageAnimationsIfNeeded()
https://bugs.webkit.org/show_bug.cgi?id=195659
Summary Fix the argument type of RenderView::resumePausedImageAnimationsIfNeeded()
Benjamin Poulain
Reported 2019-03-12 19:40:11 PDT
Fix the argument type of RenderView::resumePausedImageAnimationsIfNeeded()
Attachments
Patch (2.47 KB, patch)
2019-03-12 19:41 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2019-03-12 19:41:42 PDT
Radar WebKit Bug Importer
Comment 2 2019-03-13 14:50:56 PDT
Benjamin Poulain
Comment 3 2019-03-13 22:19:08 PDT
Comment on attachment 364497 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 4 2019-03-13 22:44:29 PDT
Comment on attachment 364497 [details] Patch Clearing flags on attachment: 364497 Committed r242936: <https://trac.webkit.org/changeset/242936>
WebKit Commit Bot
Comment 5 2019-03-13 22:44:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.