Fix the argument type of RenderView::resumePausedImageAnimationsIfNeeded() https://bugs.webkit.org/show_bug.cgi?id=195659

Reviewed by Saam Barati.

The two callers of resumePausedImageAnimationsIfNeeded() both get the IntRect
as a reference. The rect was going on the stack then used as a reference again.

* rendering/RenderView.cpp:
(WebCore::RenderView::resumePausedImageAnimationsIfNeeded):
* rendering/RenderView.h:


Canonical link: https://commits.webkit.org/210026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242936 268f45cc-cd09-0410-ab3c-d52691b4dbfc